--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
+# Python
 .env
-icd_10_codes.csv
-PMC_Patients_clean.csv
 *.pyc
 __pycache__/
 venv/
+
+# Data files
+icd_10_codes.csv
+PMC_Patients_clean.csv
+
+# Frontend (Next.js)
+frontend/.next/
+frontend/out/
+frontend/node_modules/
+frontend/.env.local
+frontend/.env.production.local
+frontend/.env.development.local
+frontend/.vercel
+frontend/.turbo
