--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ frontend/.env.production.local
 frontend/.env.development.local
 frontend/.vercel
 frontend/.turbo
+
+# Generated Index Files
+  data/indexes/*
+  !data/indexes/.gitkeep
