--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ frontend/.env.development.local
 frontend/.vercel
 frontend/.turbo
 
-# Generated Index Files
-  data/indexes/*
-  !data/indexes/.gitkeep
+# Faiss Index Files (Generated)
+  faiss_icd10_index.bin
+  faiss_icd10_index_config.json
+  faiss_icd10_index_metadata.pkl
